--- a/packages/design-system/ui/components/tabs/flavors/default/_index.scss
+++ b/packages/design-system/ui/components/tabs/flavors/default/_index.scss
@@ -116,6 +116,10 @@
       background-color: $color-brand-dark;
     }
   }
+
+  + .slds-tabs--default__item {
+    margin-left: $spacing-large;
+  }
 }
 
 .slds-tabs--default__content {
