remove bottom border on popover panel header (#1860)
* remove bottom border on popover panel header

* change none to 0

--- a/packages/design-system/ui/components/popovers/flavors/panels/_index.scss
+++ b/packages/design-system/ui/components/popovers/flavors/panels/_index.scss
@@ -16,6 +16,7 @@
     padding: $spacing-large $spacing-large $spacing-small;
     border-top-left-radius: calc(#{$border-radius-medium} - #{$border-width-thin});
     border-top-right-radius: calc(#{$border-radius-medium} - #{$border-width-thin});
+    border-bottom: 0;
   }
 
   .slds-popover__body {
