Section title update (#1896)
* Update non collapsable section title to match display output of collapsable version

--- a/packages/design-system/ui/utilities/text/flavors/section-title/_index.scss
+++ b/packages/design-system/ui/utilities/text/flavors/section-title/_index.scss
@@ -18,6 +18,9 @@
     display: flex;
     align-items: center;
     font-size: $font-size-large;
+    line-height: $line-height-button; // Same height as title-action
+    border: $border-width-thin solid transparent;
+    border-radius: $border-radius-medium;
   }
 
   &__title-action {
