Listbox with pill options (#1946)
* Move pill.scss to base & add links to new pill section

* pill in-container version

* Add mixins and tokens

* margin on the pill

* update class name

* token transgression

* New listbox pill markup in list-builder

* New listbox markup in picklist

* Switch from list—horizontal class to aria attribute

* Change naming to coexist with picklist, add focus

* add semicolon

* Switch space to the li

* first:child is more efficient for browser performance

* One more time

* change name of variant

* Fix imports

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -132,7 +132,8 @@
   'app-launcher/index',
 
   // Pills
-  'pills/index',
+  'pills/flavors/base/index',
+  'pills/flavors/listbox-of-pill-options/index',
 
   // Process
   'process/flavors/wizard/index',
