--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -35,6 +35,9 @@
   'icons/flavors/icon-colors/index',
   'icons/flavors/sizes/index',
 
+  // Accordion
+  'accordion/flavors/base/index',
+
   // Dynamic icons
   'dynamic-icons/flavors/ellie/index',
   'dynamic-icons/flavors/eq/index',
