--- a/packages/design-system/ui/components/split-view/_index.scss
+++ b/packages/design-system/ui/components/split-view/_index.scss
@@ -7,33 +7,112 @@
 
 // THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-// Wrapper of split view
-//
-// Contains the split view list and the view toggle button
+/**
+ * <h4 class="site-text-heading--label">Accessibility</h4>
+ *
+ * The list component of the Split View consists of an ARIA Listbox, and as
+ * such must obied by the following rules:
+ *
+ * - Each option can only be a single actionable element. No child actions are allowed
+ * - **Must** implement the keyboard interaction as described by the [ARIA Authoring Practices](https://www.w3.org/TR/wai-aria-practices/#Listbox)
+ * - For each open workspace tab, the corresponding option _should_ be set to `aria-selected="true"`
+ *
+ * @summary Split view is used to navigate between records in a list while staying on the same screen.
+ *
+ * @base
+ * @name split-view
+ * @selector .slds-split-view_container
+ * @support prototype
+ * @category feature
+ * @type navigation
+ * @role expandable-panel
+ */
+
+/**
+ * Wrapper of split view
+ *
+ * @name base
+ * @selector .slds-split-view_container
+ * @restrict div
+ * @required
+ * @variant
+ */
 .slds-split-view_container {
   position: relative;
   display: flex;
   flex-direction: column;
   min-width: 0;
+  /**
+   * Modifier to rotate the left arrow icon on close
+   *
+   * @selector .slds-is-closed
+   * @restrict .slds-split-view_container
+   * @modifier
+   * @group toggle
+   */
+  &.slds-is-closed {
 
+    .slds-split-view {
+      display: none;
+    }
+    .slds-split-view__toggle-button .slds-button__icon {
+      transform: rotate(180deg);
+    }
+  }
+
+  /**
+   * Toggles open/close state of split view container
+   *
+   * @selector .slds-is-open
+   * @restrict .slds-split-view_container
+   * @modifier
+   * @group toggle
+   */
   &.slds-is-open {
     flex: 1 1 auto;
+
+    .slds-split-view {
+      display: inherit;
+    }
+
+    .slds-split-view__toggle-button .slds-button__icon {
+      transform: rotate(0);
+    }
   }
 }
 
+/**
+ *
+ *
+ * @selector .slds-split-view
+ * @restrict .slds-split-view_container article
+ * @required
+ */
 .slds-split-view {
-  @include inverse-text($support: ('text-utilities'));
   background: $split-view-color-background;
+  color: $color-text-weak;
 }
 
-// Header of split view
-//
-// Contains elements such as the list filter, view switcher and refresh button
+/**
+ * Header of split view
+ *
+ * Contains elements such as the list filter, view switcher and refresh button
+ *
+ * @selector .slds-split-view__header
+ * @restrict .slds-split-view header
+ * @required
+ */
 .slds-split-view__header {
   padding: $spacing-medium $spacing-medium $spacing-x-small $spacing-large;
 }
 
-// Column headers
+/**
+ * Column headers
+ *
+ * @selector .slds-split-view__list-header
+ * @restrict .slds-split-view div
+ * @required
+ */
 .slds-split-view__list-header {
   border: {
     top: $border-width-thin solid $split-view-color-border;
@@ -42,13 +121,16 @@
   padding: $spacing-x-small $spacing-medium $spacing-x-small $spacing-large;
 }
 
-// List Item
-//
-// Each row of the list
+/**
+ * Each row of the list of split view
+ *
+ * @selector .slds-split-view__list-item
+ * @restrict .slds-split-view li
+ * @required
+ */
 .slds-split-view__list-item {
   display: flex;
   position: relative;
-  color: $color-text-inverse-weak;
   border-bottom: $border-width-thin solid $split-view-color-border;
   font-size: $font-size-text-x-small;
 
@@ -57,9 +139,15 @@
     background: $split-view-color-background-row-hover;
   }
 
-  // Unread states
-  //
-  // position dot indicator to the left of the content
+  /**
+   * Unread states
+   *
+   * Positions the dot indicator to the left of the content
+   *
+   * @selector .slds-indicator--unread
+   * @restrict .slds-split-view__list-item abbr
+   * @required
+   */
   .slds-indicator_unread,
   .slds-indicator--unread {
     @include square(8px);
@@ -68,38 +156,63 @@
     left: $spacing-x-small;
     border-radius: $border-radius-circle;
     display: block;
-    background: $color-background-alt;
+    background: $color-brand;
   }
 }
 
-// The whole row is clickable
+/**
+ * Actionable row of split view
+ *
+ * @selector .slds-split-view__list-item-action
+ * @restrict .slds-split-view__list-item a
+ * @required
+ */
 .slds-split-view__list-item-action {
+  color: currentColor;
   padding: $spacing-small $spacing-medium $spacing-small $spacing-large;
 
   &:hover,
   &:focus {
+    outline: none;
     background: $split-view-color-background-row-hover;
+    color: currentColor;
+    text-decoration: none;
+  }
+
+  &:focus {
+    box-shadow: inset 0 0 0 1px $color-brand;
+  }
+
+  &[aria-selected="true"] {
+    box-shadow: inset 4px 0 0 $color-brand;
+
+    &:focus {
+      box-shadow: inset 4px 0 0 $color-brand, inset 0 0 0 1px $color-brand;
+    }
   }
 }
 
-// Expand/Collapse button
+/**
+ * Expand/Collapse button to toggle open/close state of split view
+ *
+ * @selector .slds-split-view__toggle-button
+ * @restrict .slds-split-view_container button
+ * @required
+ */
 .slds-split-view__toggle-button {
   position: absolute;
   right: (0.75rem * -1);
-  top: 50%;
-  margin-top: (($size-xx-small / 2) * -1);
-  height: $size-xx-small;
+  height: 100%;
   width: 0.75rem;
-  background: $split-view-color-background;
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
+  background: $color-background-alt;
+  border-radius: 0;
+  border: $border-width-thin solid $color-border;
 
   &:hover,
   &:focus {
     background: $split-view-color-background-row-hover;
   }
 
-  // We just rotate the left arrow icon on close
   &.slds-is-closed .slds-button__icon {
     transform: rotate(180deg);
   }
