--- a/packages/design-system/ui/components/files/flavors/image-attachment/_index.scss
+++ b/packages/design-system/ui/components/files/flavors/image-attachment/_index.scss
@@ -7,12 +7,40 @@
 
 // THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
+/**
+ * #### Accessibility
+ *
+ * Every `<img>` you add to your site needs to have an `alt` attribute. If the image is informational, set the `alt` equal to a descriptive alternative for that image. If the image is decorative or redundant to adjacent text, set `alt=""`, which conveys to assistive technology users that the image isn’t necessary for understanding the page. Avoid using generic strings like **photo**, **image**, or **icon** as alt values, as they don’t communicate valuable content to the user.
+ *
+ * @summary Files are a representation of content uploaded as an attachment.
+ *
+ * @base
+ * @name files
+ * @selector .slds-image
+ * @support dev-ready
+ */
 
-
+/**
+ * A figure component is a self-contained unit of content, such as an image with an optional caption. The figure component should NOT be used with icons or logos. A figure can optionally be cropped to a specific ratio such as 16x9, 4x3 and 1x1 with the use of `.slds-image__crop` and passing in a ratio class such as `.slds-image__crop--16-by-9`.
+ *
+ *
+ * @summary Initializes an image component
+ *
+ * @name image-attachment
+ * @selector .slds-image
+ * @restrict figure
+ * @variant
+ */
 .slds-image {
   display: block;
   position: relative;
 
+  /**
+   * Set crop boundaries to an image component
+   *
+   * @selector .slds-image__crop
+   * @restrict .slds-image
+   */
   &__crop {
     display: block;
     position: relative;
@@ -31,22 +59,52 @@
       display: block;
     }
 
+    /**
+     * Crops image to a ratio of 1:1
+     *
+     * @selector .slds-image--1-by-1
+     * @restrict .slds-image
+     * @modifier
+     * @group ratio
+     */
     &_1-by-1,
     &--1-by-1 {
       padding-top: 100%;
     }
 
+    /**
+     * Crops image to a ratio of 16:9
+     *
+     * @selector .slds-image--16-by-9
+     * @restrict .slds-image
+     * @modifier
+     * @group ratio
+     */
     &_16-by-9,
     &--16-by-9 {
       padding-top: 56.25%;
     }
 
+    /**
+     * Crops image to a ratio of 4:3
+     *
+     * @selector .slds-image--4-by-3
+     * @restrict .slds-image
+     * @modifier
+     * @group ratio
+     */
     &_4-by-3,
     &--4-by-3 {
       padding-top: 75%;
     }
   }
 
+  /**
+   * Image caption associated to an image
+   *
+   * @selector .slds-image__title
+   * @restrict .slds-image figcaption
+   */
   &__title {
     display: flex;
     align-items: center;
@@ -76,6 +134,13 @@
     }
   }
 
+  /**
+   * If text sits on top of image, apply an overlay with this class
+   *
+   * @selector .slds-image--overlay
+   * @restrict .slds-image
+   * @modifier
+   */
   &_overlay,
   &--overlay {
     content: '';
@@ -89,6 +154,13 @@
     z-index: 1;
   }
 
+  /**
+   * Change style of image to a card look
+   *
+   * @selector .slds-image--card
+   * @restrict .slds-image
+   * @modifier
+   */
   &_card,
   &--card {
     background: $color-background-alt;
@@ -96,6 +168,12 @@
     box-shadow: $shadow-image;
   }
 
+  /**
+   * When only image type is available, this class help position the file type icon
+   *
+   * @selector .slds-image__icon
+   * @restrict .slds-image span
+   */
   &__icon {
     position: absolute;
     top: 50%;
@@ -104,6 +182,12 @@
     margin-top: (($square-icon-large-content / 2) * -1); // Half the size of the icon
   }
 
+  /**
+   * Actions menu placement that sits on top of image
+   *
+   * @selector .slds-image__actions
+   * @restrict .slds-image div
+   */
   &__actions {
     position: absolute;
     top: $spacing-x-small;
