--- a/packages/design-system/ui/components/pills/flavors/base/_index.scss
+++ b/packages/design-system/ui/components/pills/flavors/base/_index.scss
@@ -7,6 +7,32 @@
 
 // THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
+/**
+ * To create a pill, apply the `.slds-pill` class on a `span`. Inside, place either a `span` or an `a` with the `.slds-pill__label` class around the text.
+ *
+ * Additionally, a pill can have an icon or image that sits to the left-hand side of the `.slds-pill__label`. That icon or image should receive the class `.slds-pill__icon`.
+ *
+ * You may also want the functionality to remove the pill as a selection. An "X" icon is normally used and will sit to the right-hand side of the `.slds-pill__label`. That icon should receive the class `.slds-pill__remove`.
+ *
+ * A `.slds-pill_container` can be used as a visual container for multiple pill(s).
+ *
+ * @summary A pill represents an object that can be viewed with or without an icon
+ *
+ * @base
+ * @name pills
+ * @selector .slds-pill
+ * @support dev-ready
+ */
+
+/**
+ * @summary Initializes pill
+ *
+ * @name base
+ * @selector .slds-pill
+ * @restrict span
+ * @support dev-ready
+ * @variant
+ */
 .slds-pill {
   display: inline-flex;
   align-items: center;
@@ -37,6 +63,13 @@
     text-decoration: none;
   }
 
+  /**
+   * Modifier that removes border and background from a pill
+   *
+   * @selector .slds-pill--bare
+   * @restrict .slds-pill
+   * @modifier
+   */
   &_bare,
   &--bare {
     background-color: transparent;
@@ -47,6 +80,12 @@
     }
   }
 
+  /**
+   * Container to hold pill(s) with borders
+   *
+   * @selector .slds-pill_container
+   * @restrict div
+   */
   &__container,
   &-container,
   &_container {
@@ -58,6 +97,14 @@
     min-height: calc(#{$height-input} + 2px);
   }
 
+  /**
+   * Container to hold pill(s) with no borders
+   *
+   * @selector .slds-pill_container--bare
+   * @restrict .slds-pill_container
+   * @modifier
+   * @deprecated
+   */
   &__container_bare,
   &__container--bare,
   &_container_bare,
@@ -69,6 +116,12 @@
     border-radius: 0;
   }
 
+  /**
+   * Line of text inside a pill
+   *
+   * @selector .slds-pill__label
+   * @restrict .slds-pill a, .slds-pill span
+   */
   &__label {
     white-space: nowrap;
     overflow: hidden;
@@ -81,6 +134,12 @@
     }
   }
 
+  /**
+   * Initializes pill icon or avatar that sits to the left of the label
+   *
+   * @selector .slds-pill__icon
+   * @restrict .slds-pill span
+   */
   &__icon,
   &__icon_container {
     @include square($square-icon-x-small-boundary);
@@ -91,6 +150,12 @@
     }
   }
 
+  /**
+   * Initializes remove icon in pill that sits to the right of the label
+   *
+   * @selector .slds-pill__remove
+   * @restrict .slds-pill button
+   */
   &__remove {
     @include square ($square-icon-xx-small-boundary);
     display: inline-flex;
@@ -104,7 +169,13 @@
   }
 }
 
-// Error Styles
+/**
+ * Pill error styles
+ *
+ * @selector .slds-has-error
+ * @restrict .slds-pill
+ * @modifier
+ */
 .slds-has-error {
   border-color: $color-border-error;
 
