Chore/remove old imports (#1994)
* Remove old imports that point to old paths for radio, checkbox, checkbox-button, select

* Add form element as a variant to form-layout

* Remove remaining imports for old paths

* Add back label for attr

* Hide label on dynamic list variant

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -48,7 +48,7 @@
   'cards/index',
 
   // Forms
-  'forms/index',
+  'form-layout/flavors/element/index',
   'input/flavors/base/index',
   'input/flavors/read-only/index',
   'textarea/flavors/base/index',
