--- a/packages/design-system/ui/components/form-layout/flavors/element/_index.scss
+++ b/packages/design-system/ui/components/form-layout/flavors/element/_index.scss
@@ -8,6 +8,14 @@
 // THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 
+/**
+ * @summary Creates layout for a form element
+ *
+ * @name element
+ * @selector .slds-form-element
+ * @restrict .slds-form div, .slds-form fieldset
+ * @variant
+ */
 .slds-form-element {
   position: relative;
 
@@ -18,7 +26,12 @@
     }
   }
 
-  // Form Element Label
+  /**
+   * Creates label styles for our form elements
+   *
+   * @selector .slds-form-element__label
+   * @restrict .slds-form-element label
+   */
   &__label {
     display: inline-block;
     color: $color-text-label;
@@ -32,9 +45,12 @@
     }
   }
 
-  // Form Element Control
-  //
-  // Wrapper to any form display element
+  /**
+   * Wrapper to any form display element
+   *
+   * @selector .slds-form-element__control
+   * @restrict .slds-form-element div
+   */
   &__control {
 
     // Force radios and checkboxes to be on own line when there
@@ -45,20 +61,24 @@
     }
   }
 
-  // Form Element Icon
-  //
-  // When an icon sits within a form element wrapper
-  // and adjacent to another element inside that wrapper such as a .form-element__label
-  // This should be used as the wrapper
+  /**
+   * When an icon sits within a form element wrapper and adjacent to another
+   * element inside that wrapper such as a .form-element__label
+   *
+   * @selector .slds-form-element__icon
+   * @restrict .slds-form-element div
+   */
   &__icon {
     display: inline-block;
     position: relative; // Since this container can have a tooltip
   }
 
-  // Inline Level Help Text
-  //
-  // Sits inside .form-element__control and below the element such
-  // as <input>
+  /**
+   * Creates inline help styles, sits below .form-element__control
+   *
+   * @selector .slds-form-element__help
+   * @restrict .slds-form-element div
+   */
   &__help {
     font-size: $font-size-small;
     margin-top: $spacing-x-small;
@@ -75,13 +95,24 @@
   }
 }
 
-// Required Star
+/**
+ * Required Star
+ *
+ * @selector .slds-required
+ * @restrict .slds-form-element__label abbr
+ */
 .slds-required {
   color: $color-text-error;
   margin: 0 $spacing-xxx-small;
 }
 
-// Error Styles
+/**
+ * Error styles for form element
+ *
+ * @selector .slds-has-error
+ * @restrict .slds-form-element
+ * @modifier
+ */
 .slds-has-error {
 
   .slds-form-element__help {
