Two line support for utility bar (#2025)
* Add support for two lines of text with utility bar item, add notification variant

* Fix example

* Add notificiation token for utility bar, lint

--- a/packages/design-system/ui/components/split-view/_index.scss
+++ b/packages/design-system/ui/components/split-view/_index.scss
@@ -151,14 +151,28 @@
    */
   .slds-indicator_unread,
   .slds-indicator--unread {
-    @include square(8px);
-    position: absolute;
-    top: $spacing-medium;
-    left: $spacing-x-small;
-    border-radius: $border-radius-circle;
-    display: block;
     background: $color-brand;
   }
+}
+
+/**
+ * Unread states
+ *
+ * Positions the dot indicator to the left of the content
+ *
+ * @selector .slds-indicator--unread
+ * @restrict .slds-split-view__list-item abbr
+ * @required
+ */
+.slds-indicator_unread,
+.slds-indicator--unread {
+  @include square(8px);
+  position: absolute;
+  top: $spacing-medium;
+  left: $spacing-x-small;
+  display: block;
+  border-radius: $border-radius-circle;
+  background: $color-background-notification-badge;
 }
 
 /**
