--- a/packages/design-system/ui/components/docked-utility-bar/flavors/utility-bar/_index.scss
+++ b/packages/design-system/ui/components/docked-utility-bar/flavors/utility-bar/_index.scss
@@ -49,68 +49,120 @@
   z-index: $z-index-overlay; // Better token - more specific to docked stuff
 
   /**
-   * Items that invoke specific utility bar panel
+   * Notification indicator
    *
-   * @selector .slds-utility-bar__item
-   * @restrict .slds-utility-bar li
-   * @required
+   * @selector .slds-indicator--unread
+   * @restrict .slds-utility-bar abbr
    */
-  &__item {
-    display: flex;
-    margin-right: $border-width-thin;
+  .slds-indicator_unread,
+  .slds-indicator--unread {
+    background: $utility-bar-color-background-notification-badge;
+    top: $spacing-x-small;
+  }
+}
+
+/**
+ * Items that invoke specific utility bar panel
+ *
+ * @selector .slds-utility-bar__item
+ * @restrict .slds-utility-bar li
+ * @required
+ */
+.slds-utility-bar__item {
+  display: flex;
+  margin-right: $border-width-thin;
+}
+
+/**
+ * Button that invokes utility panel
+ *
+ * @selector .slds-utility-bar__action
+ * @restrict .slds-utility-bar button
+ */
+.slds-utility-bar__action {
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  padding: 0 $spacing-small;
+  border-radius: 0;
+  border: 0;
+  color: $color-text-default;
+
+  &:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 2px;
+    background: transparent;
+  }
+
+  &:focus,
+  &:hover {
+    box-shadow: none;
+  }
+
+  &:focus:after {
+    height: ($border-width-thick + 1px);
+    background: $color-brand;
+  }
+
+  &:hover,
+  &:focus {
+    background: $color-background-utility-bar-hover;
+    color: inherit;
   }
 
   /**
-   * Button that invokes utility panel
-   *
-   * @selector .slds-utility-bar__action
-   * @restrict .slds-utility-bar button
+   * @selector .slds-is-active
+   * @restrict .slds-utility-bar__action
+   * @modifier
    */
-  &__action {
-    position: relative;
-    padding: 0 $spacing-small;
-    border-radius: 0;
-    border: 0;
-    color: $color-text-default;
+  &.slds-is-active {
+    background: $color-background-utility-bar-hover;
+    color: inherit;
 
     &:after {
-      content: '';
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      height: 2px;
-      background: transparent;
-    }
-
-    &:focus,
-    &:hover {
-      box-shadow: none;
-    }
-
-    &:focus:after {
       background: $color-brand;
-      height: ($border-width-thick + 1px);
     }
+  }
+}
+
+/**
+ * Container for utility bar item text, allows for multi-line text output
+ *
+ * @selector .slds-utility-bar__text
+ * @restrict .slds-utility-bar__action > span
+ * @modifier
+ */
+.slds-utility-bar__text {
+  display: flex;
+  flex-direction: column;
+  line-height: 1;
+  text-align: left;
+}
+
+/**
+ * Creates styles for a utility bar item when it has a notification within its panel
+ *
+ * @selector .slds-has-notification
+ * @restrict .slds-utility-bar__item
+ * @modifier
+ */
+.slds-has-notification {
+
+  .slds-utility-bar__action {
+    background: $color-background-info;
+    color: $color-text-inverse;
 
     &:hover,
     &:focus {
-      color: inherit;
-      background: $color-background-utility-bar-hover;
+      background: $color-background-alt-inverse;
     }
 
-    /**
-     * @selector .slds-is-active
-     * @restrict .slds-utility-bar__action
-     * @modifier
-     */
-    &.slds-is-active {
-      background: $color-background-utility-bar-hover;
-      color: inherit;
-
-      &:after {
-        background: $color-brand;
-      }
+    &:focus:after {
+      background: $color-border-separator-alt-2;
     }
   }
 }
