Fix linting warnings in Design tokens

--- a/packages/design-system/ui/_design-tokens.scss
+++ b/packages/design-system/ui/_design-tokens.scss
@@ -1,9 +1,9 @@
 // Copyright (c) 2015-present, salesforce.com, inc. All rights reserved
 // Licensed under BSD 3-Clause - see LICENSE.txt or git.io/sfdc-license
 
-//-----------------------------------------------------------------------------
+// ----------------------------------------------------------------------------
 // Imports
-//-----------------------------------------------------------------------------
+// ----------------------------------------------------------------------------
 
 @import
   '../design-tokens/dist/s1-base-large.default',
@@ -17,9 +17,9 @@
   '../design-tokens/dist/bg-custom.map',
   '../design-tokens/dist/bg-standard.map';
 
-//-----------------------------------------------------------------------------
+// ----------------------------------------------------------------------------
 // Media Queries
-//-----------------------------------------------------------------------------
+// ----------------------------------------------------------------------------
 
 $mq-x-small: 320px !default;
 $mq-small: 480px !default;
